--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
   "test": {
     "username": "root",
     "password": "password",
-    "database": "database_test",
+    "database": "hotel_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
